--- a/170516/Views/Administrator/ViewProductCategory.cshtml
+++ b/170516/Views/Administrator/ViewProductCategory.cshtml
@@ -1,22 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Quản Lý Nhóm Sản Phẩm";
+    ViewBag.Title = "Quản Lý Danh Mục";
 }
 
 <div class="row">
     <div class="col-md-12">
         <div class="content-box-large">
             <div class="panel-heading">
-                <div class="panel-title title-1">Quản Lý Nhóm Sản Phẩm</div>
-            </div>
-            <div class="panel-body">
-                Ut tristique adipiscing mauris, sit amet suscipit metus porta quis. Donec dictum tincidunt erat, eu blandit ligula. Nam sit amet dolor sapien. Quisque velit erat, congue sed suscipit vel, feugiat sit amet enim. Suspendisse interdum enim at mi tempor commodo. Sed tincidunt sed tortor eu scelerisque. Donec luctus malesuada vulputate. Nunc vel auctor metus, vel adipiscing odio. Aliquam aliquet rhoncus libero, at varius nisi pulvinar nec. Aliquam erat volutpat. Donec ut neque mi. Praesent enim nisl, bibendum vitae ante et, placerat pharetra magna. Donec facilisis nisl turpis, eget facilisis turpis semper non. Maecenas luctus ligula tincidunt iasdsd vitae ante et,
-            </div>
-        </div>
-    </div>
-    <div class="col-md-12">
-        <div class="content-box-large">
-            <div class="panel-heading">
-                <div class="panel-title title-3">Danh Sách Sản Phẩm</div>
+                <div class="panel-title title-3">Danh Sách Danh Mục</div>
                 <div class="panel-options">
                     <a id="addBtn" href="#" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
                 </div>
