--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -41,7 +41,7 @@
                             <!-- Sub menu -->
                             <ul>
                                 <li><a href="@Url.Action("ViewProductCategory","Administrator")">Danh Mục</a></li>
-                                <li><a href="signup.html">Sản Phẩm</a></li>
+                                <li><a href="@Url.Action("ViewProduct","Administrator")">Sản Phẩm</a></li>
                             </ul>
                         </li>
                         <li><a href="stats.html"><i class="glyphicon glyphicon-user"></i> Tài Khoản</a></li>
