--- a/170516/Content/Admin/css/styles.css
+++ b/170516/Content/Admin/css/styles.css
@@ -575,6 +575,12 @@ body {
 .panel-heading > .panel-title, .content-box-header .panel-title {
     float: left;
     padding-top: 0px;
+    width: 100%;
+    border-bottom: 2px solid;
+    border-radius: 2px;
+    color: #2c3e50;
+    line-height: 40px;
+    margin-bottom: 15px;
 }
 
     .panel-heading > .panel-title > *, .content-box-header .panel-title > * {
