--- a/170516/Views/Administrator/_AddColorPartial.cshtml
+++ b/170516/Views/Administrator/_AddColorPartial.cshtml
@@ -7,7 +7,7 @@
         <div class="modal-body">
             <div class="form-horizontal input-form">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-3 control-label">Danh Mục</label>
+                    <label for="inputEmail3" class="col-sm-3 control-label">Thêm Màu Mới</label>
                     <div class="col-sm-9">
                         <input type="email" class="form-control" id="inputEmail3">
                     </div>
