--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -69,6 +69,7 @@
     </div>    
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery_upload")
     @Scripts.Render("~/bundles/admin_script")
     @RenderSection("scripts", required: false)
 </body>
