--- a/170516/Views/Home/_AddColorPartial.cshtml
+++ b/170516/Views/Home/_AddColorPartial.cshtml
@@ -5,7 +5,7 @@
             <h4 class="modal-title">Thêm Màu Sắc Mới</h4>
         </div>
         <div class="modal-body">
-            <form id="AddColorForm" action="@Url.Action("AddColor","Home")" method="post">
+            <form id="AddColorForm" action="@Url.Action("AddColor","Administrator")" method="post">
                 <div class="form-horizontal input-form">
                     <div class="form-group">
                         <label for="ColorName" class="col-sm-3 control-label">Tên Màu</label>
