--- a/170516/Views/Administrator/ViewProduct.cshtml
+++ b/170516/Views/Administrator/ViewProduct.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model _170516.Models.Administrator.ViewProductModel
+
+@{
     ViewBag.Title = "Quản lý sản phẩm";
 }
 
@@ -6,7 +8,6 @@
     <div class="col-md-12">
         <div class="content-box-large">
             <div class="panel-heading">
-                @*nav bar*@
                 <ol class="breadcrumb">
                     <li class="active">Quản Lý Sản Phẩm</li>
                 </ol>
@@ -16,131 +17,129 @@
                 </div>
             </div>
             <div class="panel-body">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_show_item_div">
-                            <label>
-                                <span>Hiển thị</span><select id="showNumberSelect" aria-controls="dataTables-example" class="form-control input-sm">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select>
-                            </label>
+                @if (Model.Products.Any())
+                {
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="dataTables_show_item_div">
+                                <label>
+                                    <span>Hiển thị</span>
+                                    <select id="showNumberSelect" aria-controls="dataTables-example" class="form-control input-sm">
+                                        @if (Model.ItemOnPage == 10)
+                                        {
+                                            <option value="10" selected>10</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="10">10</option>
+                                        }
+
+                                        @if (Model.ItemOnPage == 25)
+                                        {
+                                            <option value="25" selected>25</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="25">25</option>
+                                        }
+
+                                        @if (Model.ItemOnPage == 50)
+                                        {
+                                            <option value="50" selected>50</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="50">50</option>
+                                        }
+
+                                        @if (Model.ItemOnPage == 100)
+                                        {
+                                            <option value="100" selected>100</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="100">100</option>
+                                        }
+                                    </select>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div id="dataTables_show_item_search" class="dataTables_search_div">
+                                <label>Tìm</label>
+                                <input type="search" class="form-control input-sm" value="@Model.SearchText">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div id="dataTables_show_item_search" class="dataTables_search_div">
-                            <label>Tìm</label>
-                            <input type="search" class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <table width="100%" class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="sorting_asc" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending" style="width: 174px;">Tên</th>
+                                        <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 211px;">Danh Mục</th>
+                                        <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending" style="width: 193px;">Số Lượng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending" style="width: 151px;">Ngày Cập Nhật</th>
+                                        <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 111px;">Người Cập Nhật</th>
+                                        <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 111px;"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var product in Model.Products)
+                                    {
+                                        <tr class="gradeA odd" role="row">
+                                            <td class="sorting_1">@product.ProductName</td>
+                                            <td>@product.CategoryName</td>
+                                            <td>@product.QuantityInStock</td>
+                                            <td class="center">@product.DateModified.ToString("dd/MM/yyyy hh:mm")</td>
+                                            <td class="center">@product.ModifiedUser</td>
+                                            <td class="center">
+                                                <a href="@Url.Action("ViewProduct","Administrator",new {id = product.ProductID})"><i class="glyphicon glyphicon-search"></i></a>
+                                                <a href="@Url.Action("UpdateProduct","Administrator",new {id = product.ProductID})"><i class="glyphicon glyphicon-pencil"></i></a>
+                                                <a href="@Url.Action("RemoveProduct","Administrator",new {id = product.ProductID})"><i class="glyphicon glyphicon-remove"></i></a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <table width="100%" class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
-                            <thead>
-                                <tr role="row"><th class="sorting_asc" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending" style="width: 174px;">Rendering engine</th><th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 211px;">Browser</th><th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending" style="width: 193px;">Platform(s)</th><th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending" style="width: 151px;">Engine version</th><th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 111px;">CSS grade</th></tr>
-                            </thead>
-                            <tbody>
-                                <tr class="gradeA odd" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Firefox 1.0</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td class="center">1.7</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA even" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Firefox 1.5</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td class="center">1.8</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA odd" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Firefox 2.0</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td class="center">1.8</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA even" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Firefox 3.0</td>
-                                    <td>Win 2k+ / OSX.3+</td>
-                                    <td class="center">1.9</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA odd" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Camino 1.0</td>
-                                    <td>OSX.2+</td>
-                                    <td class="center">1.8</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA even" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Camino 1.5</td>
-                                    <td>OSX.3+</td>
-                                    <td class="center">1.8</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA odd" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Netscape 7.2</td>
-                                    <td>Win 95+ / Mac OS 8.6-9.2</td>
-                                    <td class="center">1.7</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA even" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Netscape Browser 8</td>
-                                    <td>Win 98SE+</td>
-                                    <td class="center">1.7</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA odd" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Netscape Navigator 9</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td class="center">1.8</td>
-                                    <td class="center">A</td>
-                                </tr>
-                                <tr class="gradeA even" role="row">
-                                    <td class="sorting_1">Gecko</td>
-                                    <td>Mozilla 1.0</td>
-                                    <td>Win 95+ / OSX.1+</td>
-                                    <td class="center">1</td>
-                                    <td class="center">A</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="dataTables_paginate">
-                            <ul class="pagination">
-                                <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous"><a href="#">Previous</a></li>
-                                <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0"><a href="#">1</a></li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">2</a></li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">3</a></li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">4</a></li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">5</a></li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">6</a></li>
-                                <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next"><a href="#">Next</a></li>
-                            </ul>
+
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber sản phẩm</div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="dataTables_paginate">
+                                <ul class="pagination">
+                                    <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous"><a href="#">Trước</a></li>
+                                    @for (var i = 0; i < 5; i++)
+                                    {
+                                        if (i == 0)
+                                        {
+                                            <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0"><a href="#">@((Model.CurrentPage + i).ToString())</a></li>
+                                        }
+                                        else
+                                        {
+                                            <li class="paginate_button" aria-controls="dataTables-example" tabindex="0"><a href="#">@((Model.CurrentPage + i).ToString())</a></li>
+                                        }
+                                    }
+                                    <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next"><a href="#">Sau</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
+                else
+                {
+                    <div class="well well-lg">
+                        Look, I'm in a large well!
+                    </div>
+                }
             </div>
         </div>
     </div>
 </div>
-
 @section Scripts
 {
     <script src="@Url.Content("~/Scripts/Admin/product.js")"></script>
