--- a/170516/Views/Administrator/_AddColorPartial.cshtml
+++ b/170516/Views/Administrator/_AddColorPartial.cshtml
@@ -1,10 +1,99 @@
-﻿<div class="modal-dialog">
+﻿@model List<_170516.Models.Administrator.CreateColorModel>
+
+<div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title">Thêm Màu Sắc Mới</h4>
         </div>
         <div class="modal-body">
+            <!-- Available Color List -->
+            <div class="col-sm-12" id="colorAvailableList">
+                <table width="100%" class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                    <thead>
+                        <tr role="row">
+                            <th class="sorting_asc" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending" style="width: 174px;">Ảnh</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 211px;">Tên Màu</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending" style="width: 193px;">Platform(s)</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending" style="width: 151px;">Engine version</th>
+                            <th class="sorting" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 111px;">CSS grade</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="gradeA odd" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Firefox 1.0</td>
+                            <td>Win 98+ / OSX.2+</td>
+                            <td class="center">1.7</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA even" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Firefox 1.5</td>
+                            <td>Win 98+ / OSX.2+</td>
+                            <td class="center">1.8</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA odd" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Firefox 2.0</td>
+                            <td>Win 98+ / OSX.2+</td>
+                            <td class="center">1.8</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA even" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Firefox 3.0</td>
+                            <td>Win 2k+ / OSX.3+</td>
+                            <td class="center">1.9</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA odd" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Camino 1.0</td>
+                            <td>OSX.2+</td>
+                            <td class="center">1.8</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA even" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Camino 1.5</td>
+                            <td>OSX.3+</td>
+                            <td class="center">1.8</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA odd" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Netscape 7.2</td>
+                            <td>Win 95+ / Mac OS 8.6-9.2</td>
+                            <td class="center">1.7</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA even" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Netscape Browser 8</td>
+                            <td>Win 98SE+</td>
+                            <td class="center">1.7</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA odd" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Netscape Navigator 9</td>
+                            <td>Win 98+ / OSX.2+</td>
+                            <td class="center">1.8</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeA even" role="row">
+                            <td class="sorting_1">Gecko</td>
+                            <td>Mozilla 1.0</td>
+                            <td>Win 95+ / OSX.1+</td>
+                            <td class="center">1</td>
+                            <td class="center">A</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
             <form id="AddColorForm">
                 <div class="form-horizontal input-form">
                     <div class="error-summary"></div>
@@ -12,35 +101,40 @@
                         <label for="ColorName" class="col-sm-3 control-label">Tên Màu</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="ColorName" name="ColorName">
+                            <span class="input-error-box text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="ColorDescription" class="col-sm-3 control-label">Mô Tả</label>
                         <div class="col-sm-9">
                             <textarea id="ColorDescription" name="ColorDescription" class="form-control" rows="5"></textarea>
+                            <span class="input-error-box text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="ColorFileUpload" class="col-sm-3 control-label">Ảnh Màu</label>
                         <div class="col-sm-9">
-                            <button type="button" class="btn btn-default" id="ColorFileUploadButton">Chọn ảnh...</button>
-                            <input type="file" class="form-control" id="ColorFileUpload" name="ImageUpload" style="display:none;" />
-                            <input type="hidden" id="ColorBase64String" name="ColorBase64String" />
-                            <input type="hidden" id="ColorFileType" name="Extension" />
-                            <div id="ColorImagePreview" style="display:none;" class="colorImagePreviewCanvas">
-                                <span class="fileName"></span>
-                                <div class="filePreview" />
-                                <button class="btn btn-sm btn-primary" type="button"><i class="glyphicon glyphicon-upload"></i></button>
-                                <button class="btn btn-sm btn-default" type="reset"><i class="glyphicon glyphicon-remove"></i></button>
+                            <div>
+                                <button type="button" class="btn btn-default" id="ColorFileUploadButton">Chọn ảnh...</button>
+                                <input type="file" class="form-control" id="ColorFileUpload" name="ImageUpload" style="display:none;" />
+                                <input type="hidden" id="ColorBase64String" name="ColorBase64String" />
+                                <input type="hidden" id="Extension" name="Extension" />
+                                <div id="ColorImagePreview" style="display:none;" class="colorImagePreviewCanvas">
+                                    <span class="fileName"></span>
+                                    <span class="filePreview"></span>
+                                    <button class="btn btn-sm btn-primary btnUpload" title="Tải Ảnh" type="button"><i class="glyphicon glyphicon-upload"></i></button>
+                                    <button class="btn btn-sm btn-danger btnCancel" title="Xóa" type="reset"><i class="glyphicon glyphicon-remove"></i></button>
+                                </div>
                             </div>
+                            <span class="input-error-box text-danger"></span>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary" data-submit="AddColorForm">Lưu</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+            <button type="submit" class="btn btn-primary" data-submit="AddColorForm">Lưu</button>
         </div>
     </div>
 </div>
