--- a/170516/Views/Administrator/ViewProduct.cshtml
+++ b/170516/Views/Administrator/ViewProduct.cshtml
@@ -13,7 +13,10 @@
                 </ol>
                 <div class="panel-title title-3">Danh Sách Sản Phẩm</div>
                 <div class="panel-options">
-                    <a id="addBtn" href="@Url.Action("AddProduct", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
+                    @if (Model.Products.Any())
+                    {
+                        <a id="addBtn" href="@Url.Action("AddProduct", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
+                    }
                 </div>
             </div>
             <div class="panel-body">
@@ -73,7 +76,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <table width="100%" class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                            <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
                                 <thead>
                                     <tr role="row">
                                         <th class="sorting_asc" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending" style="width: 174px;">Tên</th>
@@ -132,9 +135,7 @@
                 }
                 else
                 {
-                    <div class="well well-lg">
-                        Look, I'm in a large well!
-                    </div>
+                    <h5>Không có sản phẩm nào được lưu trong cơ sở dữ liệu. Vui lòng tạo sản phẩm mới tại <a href="@Url.Action("AddProduct", "Administrator")">đây</a></h5>
                 }
             </div>
         </div>
